--- a/View/Styles/background.css
+++ b/View/Styles/background.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../Imagens/Icon.jpg");
+    background-image: url("../Imagens/Placeholder.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
