--- a/View/Styles/projects.css
+++ b/View/Styles/projects.css
@@ -1,7 +1,23 @@
 #projects { 
-    border: black solid 1px;
-    border-radius: 40px;
-    padding: 40px;
-    backdrop-filter: blur(4px);
-    box-shadow: inset rgb(0, 0, 0) 7px -6px ;
+    display: grid;
+    grid-template: 
+        "a a a" 10%
+        "a a a"
+        "a a a"
+    
+    ;
+}
+
+.project{
+    width: 22%;
+    height: 28%;
+    background-color: rgb(255, 255, 255);
+    backdrop-filter: blur(10px);
+    border: none;
+    color: black;
+    border-radius: 10px;
+    font-family: "Jersey 10", sans-serif;
+    font-size: 3vh;
+
+    transition: width 0.5s linear;
 }
