--- a/View/index.html
+++ b/View/index.html
@@ -21,4 +21,8 @@
     <!-- links para os controladores-->
     <script src="../Controler/main.js"></script>
     <!-- links para os scripts de frontend -->
+     <!-- <script type="module" src="../Model/Calculators/horizontal_mesh.js"></script> -->
+     <script type="module" src="../Model/Calculators/ativos.js"></script>
+     <script type="module" src="../Model/Calculators/lvl1_backbone.js"></script>
+     <script type="module" src="../Model/Calculators/lvl2_backbone.js"></script>
 </html>
