--- a/View/Containers/projeto.html
+++ b/View/Containers/projeto.html
@@ -1,13 +1,18 @@
 <div class="projeto" style="color: white; font-family: Arial, Helvetica, sans-serif;">
-    <label for="tel_pts">Numero de Pontos de telecom</label>
+    <label for="tel_pts">Número de Pontos de telecom</label>
     <input type="number" id="tel_pts" min="0">
 
-    <label for="cftv_pts">Numero de Pontos de CFTV</label>
+    <label for="cftv_pts">Número de Pontos de CFTV</label>
     <input id="cftv_pts" type="number" min="0">
 
-    <label for="voip_pts">Numero de Pontos de VOIP</label>
+    <label for="voip_pts">Número de Pontos de VOIP</label>
     <input id="voip_pts" type="number" min="0">
+    <br><br>
+    <label for="distancia_mh">Distância Média da malha</label>
+    <input type="number" min="0" id="distancia_mh">
 
-    <label for="cftv_pts">Numero de Pontos de </label>
-    <input id="cftv_pts" type="number" min="0">
+    <label for="tipo_par_tran">Categoria do cabo Par trançado</label>
+    <input type="text" id="">
+
+
 </div>
