--- a/View/Containers/andar.html
+++ b/View/Containers/andar.html
@@ -1,4 +1,5 @@
-<div class="projeto" style="color: white; font-family: Arial, Helvetica, sans-serif;">
+<div class="andar" >
+    <h1>ANDAR </h1>
     <label for="tel_pts">Número de Pontos de telecom</label>
     <input type="number" id="tel_pts" min="0">
 
@@ -7,12 +8,4 @@
 
     <label for="voip_pts">Número de Pontos de VOIP</label>
     <input id="voip_pts" type="number" min="0">
-    <br><br>
-    <label for="distancia_mh">Distância Média da malha</label>
-    <input type="number" min="0" id="distancia_mh">
-
-    <label for="tipo_par_tran">Categoria do cabo Par trançado</label>
-    <input type="text" id="">
-
-
 </div>
