--- a/View/Containers/andar.html
+++ b/View/Containers/andar.html
@@ -1,11 +1,12 @@
 <div class="andar" >
     <h1>ANDAR </h1>
-    <label for="tel_pts">Número de Pontos de telecom</label>
-    <input type="number" id="tel_pts" min="0">
+    <input name="tel_pts" type="number" min="0" placeholder="Número de Pontos de elecom">
 
-    <label for="cftv_pts">Número de Pontos de CFTV</label>
-    <input id="cftv_pts" type="number" min="0">
+    <input name="cftv_pts" type="number" min="0" placeholder="Número de Pontos de CFTV">
 
-    <label for="voip_pts">Número de Pontos de VOIP</label>
-    <input id="voip_pts" type="number" min="0">
+    <input name="voip_pts" type="number" min="0" placeholder="Número de Pontos de VOIP">
+
+    <label>Sala de Equipamentos<input type="radio" name="tem_SEQ"></label>
+
+    <label>Andar Tipo? <input type="checkbox" name="andar_tipo"></label>
 </div>
