--- a/View/Containers/andar.html
+++ b/View/Containers/andar.html
@@ -1,6 +1,6 @@
 <div class="andar" >
     <h1>ANDAR </h1>
-    <input name="tel_pts" type="number" min="0" placeholder="Número de Pontos de elecom">
+    <input name="tel_pts" type="number" min="0" placeholder="Número de Pontos de Telecom">
 
     <input name="cftv_pts" type="number" min="0" placeholder="Número de Pontos de CFTV">
 
@@ -8,5 +8,6 @@
 
     <label>Sala de Equipamentos<input type="radio" name="tem_SEQ"></label>
 
-    <label>Andar Tipo? <input type="checkbox" name="andar_tipo"></label>
+    <label for="andar_tipo">Andar Tipo? </label>
+    <input type="checkbox" name="andar_tipo" class="andar_tipo">
 </div>
