--- a/View/Containers/andar.html
+++ b/View/Containers/andar.html
@@ -1,12 +1,12 @@
 <div class="andar" >
     <h1>ANDAR </h1>
-    <input name="tel_pts" type="number" min="0" placeholder="Número de Pontos de Telecom">
+    <input name="tel_pts" type="number" min="0" class="entrada" placeholder="Núm de Ptns de Telecom">
 
-    <input name="cftv_pts" type="number" min="0" placeholder="Número de Pontos de CFTV">
+    <input name="cftv_pts" type="number" min="0"  class="entrada"   placeholder="Núm de Pnts de CFTV">
 
-    <input name="voip_pts" type="number" min="0" placeholder="Número de Pontos de VOIP">
+    <input name="voip_pts" type="number" min="0"   class="entrada"  placeholder="Núm de Pnts de VOIP">
 
-    <label>Sala de Equipamentos<input type="radio" name="tem_SEQ"></label>
+    <label>Sala de Equipamentos<input type="radio" name="tem_SEQ" class="entrada" ></label>
 
     <label for="andar_tipo">Andar Tipo? </label>
     <input type="checkbox" name="andar_tipo" class="andar_tipo">
