--- a/View/Styles/background.css
+++ b/View/Styles/background.css
@@ -1,3 +1,8 @@
 body{
     background-color: rgb(30, 31, 59);
 }
+.entrada {
+    border-radius: 10%;
+    margin: 0px 0.2vh 2vh 0.2vh;
+    padding: 10px 10px 10px 10px;
+}
