--- a/View/Containers/predio.html
+++ b/View/Containers/predio.html
@@ -5,5 +5,6 @@
 
     <button class="atualizar_andares_tipo" onclick="atualizar_andares_tipo($(this)[0].parentElement.id)">Atualizar andares tipo</button>
 
+    <input type="number" name="distancia_ate_a_set" placeholder="Distância até a SET" min="0">
     <div></div>
 </div>
