--- a/View/Containers/predio.html
+++ b/View/Containers/predio.html
@@ -3,11 +3,6 @@
     
     <button id="add_andar" onclick="adicionar_andar($(this)[0].parentElement.id)" class="entrada" >Adicionar Andar</button>
 
-<<<<<<< HEAD
-    <input type="number" name="distancia_ate_a_set" placeholder="Distância até a SET" min="0">
-=======
-    <button id="atualizar_andares_tipo" onclick="atualizar_andares_tipo($(this)[0].parentElement.id)" class="entrada">Atualizar andares tipo</button>
-    <input type="number" name="distancia_ate_a_set" class="entrada" placeholder="Distância até a SET" min="0">
->>>>>>> b6c9a06b8cdd34a59996e53de015ea6a45dd8744
+    <input type="number" name="dist_ate_ef" placeholder="Distância até a EF" min="0">
     <div></div>
 </div>
