--- a/View/Containers/andar.html
+++ b/View/Containers/andar.html
@@ -1,10 +1,10 @@
 <div class="andar" >
-    <h1>ANDAR </h1>
-    <input name="tel_pts" type="number" min="0" class="entrada" placeholder="Núm de Ptns de Telecom">
+    <h2>ANDAR </h2>
+    <input name="tel_pts" type="number" min="0" class="entrada" placeholder="Num de Pnts de Telecom">
 
-    <input name="cftv_pts" type="number" min="0"  class="entrada"   placeholder="Núm de Pnts de CFTV">
+    <input name="cftv_pts" type="number" min="0"  class="entrada"   placeholder="Num de Pnts de CFTV">
 
-    <input name="voip_pts" type="number" min="0"   class="entrada"  placeholder="Núm de Pnts de VOIP">
+    <input name="voip_pts" type="number" min="0"   class="entrada"  placeholder="Num de Pnts de VOIP">
 
     <label>Sala de Equipamentos<input type="radio" name="tem_SEQ" class="entrada" ></label>
 
