--- a/View/Containers/andar.html
+++ b/View/Containers/andar.html
@@ -8,6 +8,5 @@
 
     <label>Sala de Equipamentos<input type="radio" name="tem_SEQ" class="entrada" ></label>
 
-    <label for="andar_tipo">Andar Tipo? </label>
-    <input type="checkbox" name="andar_tipo" class="andar_tipo">
+    <button onclick="duplicar_andar($(this)[0].parentElement.id)">DUPLICAR</button>
 </div>
