--- a/View/Containers/andar.html
+++ b/View/Containers/andar.html
@@ -8,5 +8,5 @@
 
     <label>Sala de Equipamentos<input type="radio" name="tem_SEQ" class="entrada" ></label>
 
-    <button onclick="duplicar_andar($(this)[0].parentElement.id)">DUPLICAR</button>
+    <button onclick="duplicar_andar($(this)[0].parentElement.id)" class="entrada">DUPLICAR</button>
 </div>
