--- a/View/Containers/predio.html
+++ b/View/Containers/predio.html
@@ -3,6 +3,6 @@
     
     <button id="add_andar" onclick="adicionar_andar($(this)[0].parentElement.id)" class="entrada" >Adicionar Andar</button>
 
-    <input type="number" name="dist_ate_ef" placeholder="Distância até a EF" min="0">
+    <input type="number" name="dist_ate_ef" placeholder="Distância até a EF" min="0" class="entrada">
     <div></div>
 </div>
