--- a/View/Containers/tabelaMH.html
+++ b/View/Containers/tabelaMH.html
@@ -1,4 +1,4 @@
-<div id="containerTabelaMH"><table border="1" id="tabelaMH">
+<div id="containerTabelaMH"><table id="tabelaMH">
     <thead>
         <tr>
             <th>Nome</th>
