--- a/View/Containers/predio.html
+++ b/View/Containers/predio.html
@@ -1,8 +1,21 @@
-<div class="predio" style="color: white; font-family: Arial, Helvetica, sans-serif;">
-    <h2>PREDIO </h2>
-    
-    <button id="add_andar" onclick="adicionar_andar($(this)[0].parentElement.id)" class="entrada" >Adicionar Andar</button>
-
-    <input type="number" name="dist_ate_ef" placeholder="Distância até a EF" min="0" class="entrada">
+<div
+    class="predio"
+    style="color: white; font-family: Arial, Helvetica, sans-serif"
+>
+    <h2>PREDIO</h2>
+    <button
+        id="add_andar"
+        onclick="adicionar_andar($(this).parent().attr('id'))"
+        class="entrada"
+    >
+        Adicionar Andar
+    </button>
+    <input
+        type="number"
+        name="dist_ate_ef"
+        placeholder="Distância até a EF"
+        min="0"
+        class="entrada"
+    />
     <div></div>
 </div>
