--- a/View/Containers/tabelaMH.html
+++ b/View/Containers/tabelaMH.html
@@ -1,12 +1,12 @@
-<div id="containerTabelaMH"><table id="tabelaMH">
-    <thead>
-        <tr>
-            <th>Nome</th>
-            <th>Unidade</th>
-            <th>Quantidade</th>
-        </tr>
-    </thead>
-    <tbody>
-    </tbody>
-</table>
+<div class="table-container" id="containerTabelaMH">
+    <table id="tabelaMH">
+        <thead>
+            <tr>
+                <th>Nome</th>
+                <th>Unidade</th>
+                <th>Quantidade</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
 </div>
