--- a/View/Containers/tabelaBackbone.html
+++ b/View/Containers/tabelaBackbone.html
@@ -1,14 +1,15 @@
-<table border="1">
-    <thead>
-        <tr>
-            <th colspan="3">Quantificação de Backbone</th>
-        </tr>
-        <tr>
-            <th>Nome</th>
-            <th>Unidade</th>
-            <th>Quantidade</th>
-        </tr>
-    </thead>
-    <tbody>
-    </tbody>
-</table>
+<div class="table-container">
+    <table border="1">
+        <thead>
+            <tr>
+                <th colspan="3">Quantificação de Backbone</th>
+            </tr>
+            <tr>
+                <th>Nome</th>
+                <th>Unidade</th>
+                <th>Quantidade</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+</div>
