--- a/View/Containers/andar.html
+++ b/View/Containers/andar.html
@@ -21,9 +21,9 @@
         class="entrada"
         placeholder="Num de Pnts de VOIP"
     />
-    <label
-        >Sala de Equipamentos<input type="radio" name="tem_SEQ" class="entrada"
-    /></label>
+    <label>
+        Sala de Equipamentos<input type="radio" name="tem_SEQ" class="entrada"/>
+    </label>
     <button
         onclick="duplicar_andar($(this).parent().attr('id'))"
         class="entrada"
