--- a/View/Containers/tabelaBackbone.html
+++ b/View/Containers/tabelaBackbone.html
@@ -1,5 +1,5 @@
 <div class="table-container">
-    <table border="1">
+    <table>
         <thead>
             <tr>
                 <th colspan="3">Quantificação de Backbone</th>
