--- a/View/Containers/tabelaBackbone.html
+++ b/View/Containers/tabelaBackbone.html
@@ -1,9 +1,8 @@
-<div class="table-container">
-    <table>
+<div class="table-container" id="containerTabelaBackbone">
+    <p id="tecnologiaBackLvl1"></p>
+    <p id="tecnologiaBackLvl2"></p>
+    <table id="tabelaBackbone">
         <thead>
-            <tr>
-                <th colspan="3">Quantificação de Backbone</th>
-            </tr>
             <tr>
                 <th>Nome</th>
                 <th>Unidade</th>
