--- a/View/Containers/andar.html
+++ b/View/Containers/andar.html
@@ -6,4 +6,5 @@
     <button onclick="duplicar_andar($(this).parent().attr('id'))" class="entrada">
         DUPLICAR
     </button>
+    <button onclick="$(this.parent().remove())">EXCLUIR</button>
 </div>
