--- a/View/Containers/predio.html
+++ b/View/Containers/predio.html
@@ -1,9 +1,13 @@
 <div class="predio" style="color: white; font-family: Arial, Helvetica, sans-serif">
     <h2>PREDIO</h2>
-    <button id="add_andar" onclick="adicionar_andar($(this).parent().attr('id'))" class="entrada">
-    <button onclick="$(this).parent().remove()">EXCLUIR PRÉDIO</button>
-        Adicionar Andar
-    </button>
+    <button id="add_andar" onclick="adicionar_andar($(this).parent().attr('id'))" class="entrada">Adicionar Andar</button>
+    <button onclick="excluir_predio($(this))">EXCLUIR PRÉDIO</button>
+    <script>
+        function excluir_predio(predio) {
+            predio.parent().remove()
+            atualizar_numero_predios()
+        }
+    </script>
     <input type="number" name="dist_ate_ef" placeholder="Distância até a EF" min="0" class="entrada" />
     <div></div>
 </div>
