--- a/View/Containers/andar.html
+++ b/View/Containers/andar.html
@@ -10,7 +10,7 @@
     <script>
         async function excluir_andar(andar) {
             await(tira_andar(andar))
-            atualizar_numero_andars()
+            atualizar_numero_andares()
         }
 
         function tira_andar(andar){
